# PokerHand

./: CMakeLists.txt  LICENSE  main.c
inc/: methods.h  minilib.h
src/: ErrorHandler.c  PokerHand.c  getPokerHand.c  getPokerHand_old.c  isFlush.c  isStraight.c  isthree.c  istwopair.c  lib.c  mx_del_extra_whitespaces.c  print_result.c  sort_poker_hand.c
src/Combinations/: is22s.c  is2s.c  is3s.c  is4s.c  isFlush.c  isFullHouse.c  isStraight.c
src/utils/: GenerateCard.c  PokerHandErraser.c  getPokerHand.c  is4s.c  lib.c  mx_strtrim.c  print_result.c  sort_poker_hand.c
